    (probably #1741469).
  - Encoded From headers are now properly quoted (#2830141).
  - Multibyte strings (notably subjects) are now handled correctly (#2824813,
    #2925731).
  - X-DNS-Prefetch-Control: off header is now sent to browsers to prevent information
    leakage when Firefox does DNS prefetching for URL's contained in emails.
  - Added unread links in message view.

Version 1.4.20 RC2 - 17 Aug 2009
--------------------------------
  - Protect message deletion with security token system. (Secunia Advisory SA34627)

Version 1.4.20 RC1 - 12 Aug 2009
--------------------------------
  - Removed the shut down DSBL blocklists (#2796734).
  - Fixed broken RFC1918 reference in contrib/.htaccess and doc/.htaccess (#2798839).
  - Updated INSTALL doc to remove possible bad system admin typos (#2827153).
  - PHP 5.3 deprecates ereg functions (#2820952).
  - Filters plugin uses badly formatted literals request (#2805201).
  - Provide option for complete removal of usernames and user IP addresses
    from message headers, and remove personal data from Message ID seed.
    (#880029/847107)
  - Implemented page referal verification mechanism. (Secunia Advisory SA34627)
  - Implemented security token system. (Secunia Advisory SA34627)

Version 1.4.19 - 21 May 2009
----------------------------
  - Removed use of session_unregister() for compatibility with PHP 5.3.0
    and PHP 6.
  - Fixed the Filters plugin to allow commas in filter criteria text and
    not to error out when spam-scanning only unread mail.
  - Resend cookie to browser after session ID regeneration so it gets the
    right cookie parameters.
  - In SMTP, when we EHLO with an IP, wrap it in brackets (#2793154).
  - The shell escaping fix in map_yp_alias (CVE-2009-1579) was incomplete.
    Thanks Michal Hlavinka for noticing this. [CVE-2009-1381]

Version 1.4.18 - 11 May 2009
----------------------------
  - Fixed port detection in automatic base URL detection scheme
    (get_location()). (#2388423)