@@ -19,6 +19,8 @@ Version 1.4.20 - SVN
   - X-DNS-Prefetch-Control: off header is now sent to browsers to prevent information
     leakage when Firefox does DNS prefetching for URL's contained in emails.
   - Added unread links in message view.
+  - Added the ability to configure Google Mail (Gmail) as the mail server
+    behind SquirrelMail.
 
 Version 1.4.20 RC2 - 17 Aug 2009
 --------------------------------
